--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiofiles==24.1.0
 annotated-types==0.7.0
-anyio==4.8.0
+anyio==4.7.0
 bcrypt==4.2.1
+certifi==2024.12.14
 cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
@@ -9,22 +11,38 @@ dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.115.6
+fastapi-cli==0.0.7
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
 idna==3.10
+Jinja2==3.1.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
 mysqlclient==2.2.7
 psycopg2==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
-pydantic==2.10.5
+pydantic==2.10.4
 pydantic_core==2.27.2
+Pygments==2.18.0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.20
+PyYAML==6.0.2
+rich==13.9.4
+rich-toolkit==0.12.0
 rsa==4.9
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.41.3
+typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
+watchfiles==1.0.3
+websockets==14.1
